[package]
name = "places-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json", "tracing"] }
clap = "4.5.51"
csv = "1.4.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.145"
# tch = "0.22.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
axum-macros = "0.5.0"
pcre2 = "0.2.11"
b64-ct = "0.1.3"
little_exif = "0.6.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.43"


